...
    } else {
        Column(
            modifier = Modifier
                .fillMaxSize()
                .padding(horizontal = 8.dp)
                .verticalScroll(rememberScrollState())
                .testTag("main_content_container"),
        ) {
            Text(
                text = if (currentItem == null)
                    stringResource(R.string.edit_clothing_item__new__title) else
                        stringResource(R.string.edit_clothing_item__edit__title),
                textAlign = TextAlign.Center,
...
                verticalAlignment = Alignment.CenterVertically,
            ) {
                Switch(
                    checked = isFavorite,
                    onCheckedChange = { isFavorite = !isFavorite },
                    modifier = Modifier
                        .testTag("is_favorite_switch")
                        .semantics {
                        this.contentDescription =
                            if (isFavorite) "Checked" else "Unchecked"
                    }
                )
                Spacer(Modifier.width(12.dp))
...
                                newItem
                            )
                        }
                    },
                    enabled = isFormValid,
                    modifier = Modifier
                        .testTag("apply_button")
                ) {
                    if (clothingItemViewModel.itemUploadingState is ApiState.Loading) {
                        CircularProgressIndicator(
                            strokeWidth = 3.dp,
                            modifier = Modifier.size(25.dp)
                        )
...
                    ),
                    onClick = {
                        clothingItemViewModel.idOfItemToEdit.value = null
                        router.navigateBack()
                    },
                    modifier = Modifier
                        .testTag("cancel_button")
                ) {
                    Text(stringResource(R.string.edit_clothing_item__cancel_button))
                }
            }

            Spacer(modifier = Modifier.height(20.dp))
...
